# quant-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/quant_agent/: __init__.py  cli.py
src/quant_agent/agents/: __init__.py  base.py  fundamental.py  report_generator.py  risk.py  sentiment.py  technical.py
src/quant_agent/analysis/: __init__.py
src/quant_agent/core/: __init__.py  agent.py  config.py  coordinator.py
src/quant_agent/knowledge/: __init__.py  entities.py  glm_llm_client.py  graphiti_client.py  vector_store.py
src/quant_agent/tools/: __init__.py  mcp_tools.py
src/quant_agent/ui/: __init__.py  status.py
src/quant_agent/utils/: __init__.py  helpers.py  logging_config.py  report.py
tests/: conftest.py
tests/unit/: test_agents.py  test_tools.py
